🚀 Week 3 Complete: Mobile PWA Enhancements
✨ Major Features Added:
- Enhanced PWA manifest with modern display modes
- Comprehensive offline storage with IndexedDB
- Push notification service with customizable preferences
- Mobile-optimized camera scanner for barcode detection
- Offline indicator with sync queue management
- Mobile-first CSS with touch interactions and haptic feedback

📱 Mobile UX Improvements:
- Touch-friendly button sizes (44px minimum)
- Smooth scrolling and momentum
- Safe area insets for notched devices
- PWA install prompts and standalone detection
- Gesture indicators and animations
- Accessibility improvements

🔧 Technical Enhancements:
- Service worker with background sync
- Offline data persistence and sync queue
- Network status monitoring
- Storage usage tracking
- Error boundary improvements

Ready for Week 4: Business launch and user acquisition! 🎯

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Dependencies
 node_modules/
 */node_modules/
+**/node_modules/
 
 # Environment variables
 .env
@@ -50,9 +51,6 @@ coverage/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variables file
-.env
-
 # next.js build output
 .next
 
@@ -81,3 +79,6 @@ coverage/
 # Temporary files
 *.tmp
 *.temp
+
+# Vercel
+.vercel
