--- a/ectracc-backend/render.yaml
+++ b/ectracc-backend/render.yaml
@@ -3,8 +3,8 @@ services:
     name: ectracc-backend
     env: node
     plan: free
-    buildCommand: npm install
-    startCommand: npm start
+    buildCommand: cd ectracc-backend && npm install
+    startCommand: cd ectracc-backend && npm start
     envVars:
       - key: NODE_ENV
         value: production
