--- a/ectracc-backend/package.json
+++ b/ectracc-backend/package.json
@@ -8,6 +8,9 @@
     "dev": "nodemon index.js",
     "import-data": "node scripts/import-openfoodfacts.js",
     "seed-data": "node scripts/seed-sample-data.js",
+    "import-open-facts": "node scripts/import-open-facts-dumps.js",
+    "import-jsonl": "node scripts/import-openfoodfacts-jsonl.js",
+    "reset-db": "node scripts/reset-database.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
