fix: Update OAuth redirect URL to use ectracc.com domain
- Fixed AUTH_CONFIG redirectTo URL for production
- Updated from placeholder your-domain.com to ectracc.com
- Google OAuth will now redirect properly after authentication

--- a/ectracc-marketing/vercel.json
+++ b/ectracc-marketing/vercel.json
@@ -1,16 +1,9 @@
 {
-  "version": 2,
-  "name": "ectracc-marketing",
-  "builds": [
+  "outputDirectory": ".",
+  "rewrites": [
     {
-      "src": "index.html",
-      "use": "@vercel/static"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ],
   "headers": [
