Fix Render backend deployment configuration
- Set rootDir to ./ectracc-backend to run from correct directory
- Optimize memory usage with --max-old-space-size=400 flag
- Add current Vercel deployment URL to CORS allowed origins
- Enable autoDeploy for automatic deployments
- This should fix the memory issues and React dev server confusion

--- a/ectracc-backend/render.yaml
+++ b/ectracc-backend/render.yaml
@@ -3,8 +3,9 @@ services:
     name: ectracc-backend
     env: node
     plan: free
-    buildCommand: cd ectracc-backend && npm install
-    startCommand: cd ectracc-backend && npm start
+    rootDir: ./ectracc-backend
+    buildCommand: npm install
+    startCommand: node --max-old-space-size=400 index.js
     envVars:
       - key: NODE_ENV
         value: production
@@ -20,4 +21,4 @@ services:
         value: your-anon-key-here
       - key: SUPABASE_SERVICE_ROLE_KEY
         value: your-service-role-key-here
-    autoDeploy: false
+    autoDeploy: true
