Fix Render deployment by ensuring backend directory execution
- Remove rootDir approach that wasn't working
- Add start:prod script with memory optimization to backend package.json
- Use cd ectracc-backend && npm run start:prod to ensure correct execution
- This should finally run the Node.js backend instead of React frontend

--- a/ectracc-backend/package.json
+++ b/ectracc-backend/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "start:prod": "node --max-old-space-size=400 index.js",
     "dev": "nodemon index.js",
     "import-data": "node scripts/import-openfoodfacts.js",
     "seed-data": "node scripts/seed-sample-data.js",
