Fix Render deployment by moving render.yaml to root and using npm run server
- Move render.yaml to root directory where Render expects it
- Update root package.json server script to run backend with memory optimization
- Use npm run server as startCommand which Render should properly recognize
- This should finally execute the backend Node.js server instead of React frontend

--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,8 @@ services:
     name: ectracc-backend
     env: node
     plan: free
-    buildCommand: cd ectracc-backend && npm install
-    startCommand: cd ectracc-backend && npm start
+    buildCommand: npm install
+    startCommand: npm run server
     envVars:
       - key: NODE_ENV
         value: production
@@ -20,4 +20,4 @@ services:
         value: your-anon-key-here
       - key: SUPABASE_SERVICE_ROLE_KEY
         value: your-service-role-key-here
-    autoDeploy: false
+    autoDeploy: true
