--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "node server.js",
+    "server": "cd ectracc-backend && node --max-old-space-size=400 index.js",
     "postinstall": "cd ectracc-backend && npm install"
   },
   "engines": {
