--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ECTRACC Application",
   "main": "server.js",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "cd ectracc-backend && node --max-old-space-size=400 index.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
