feat: Add production-scale enrichment pipeline for 1.5M products
- Create production-scale-enrichment.js for processing 1.5M products in batches
- Add render-enrichment.yaml for Render worker service deployment
- Create run-production-enrichment.js optimized for Render environment
- Add enrichment API endpoints (/api/enrichment/start, /status, /sample)
- Implement smart enrichment data generation based on product categories
- Add comprehensive storage monitoring and safety limits (5GB max)
- Support batch processing of 5,000-10,000 products with rate limiting
- Include real-time progress reporting and error handling
- Add production-ready logging and performance metrics

Production Features:
- Connects to actual production MongoDB with 1.5M products
- Processes unenriched products in optimized batches
- Monitors database size to stay under 5GB limit
- Generates realistic enrichment data based on product types
- Includes fallback mechanisms and error recovery
- Provides API endpoints for monitoring and control
- Ready for deployment on Render production environment

Storage Efficiency:
- Estimated 200-300 bytes per enriched product
- Target: ~300MB additional storage for full enrichment
- Safety: Automatic halt if approaching storage limits
- Monitoring: Real-time database size tracking

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "generate-icons": "node scripts/generate-icons.js",
     "enrich-products": "node scripts/run-enrichment-pipeline.js",
     "enrich-production": "node scripts/production-enrichment-pipeline.js",
+    "enrich-production-scale": "node scripts/production-scale-enrichment.js",
     "monitor-storage": "node scripts/storage-monitor.js"
   },
   "engines": {
