--- a/packages/shared-types/package.json
+++ b/packages/shared-types/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "types": "src/index.ts",
   "scripts": {
-    "test": "jest"
+    "test": "echo \"No tests for types package\" && exit 0"
   },
   "keywords": [
     "ectracc",
@@ -15,7 +15,7 @@
   "author": "ECTRACC Team",
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^4.9.5"
+    "typescript": "~5.8.3"
   }
 }
 
