--- a/.github/workflows/mobile-build-ios.yml
+++ b/.github/workflows/mobile-build-ios.yml
@@ -1,10 +1,11 @@
 name: Build iOS App
 
 on:
-  push:
-    branches: [main]
-    tags:
-      - 'v*'
+  # Disabled until Expo credentials are configured
+  # push:
+  #   branches: [main]
+  #   tags:
+  #     - 'v*'
   workflow_dispatch:
     inputs:
       profile:
